bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:1: error: Boolean(false) does not take parameters
def nearHundred(n:Int): Boolean = false {
                                        ^