bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = false {
  if (10<=n) {
    return true
  }
}

nearHundred(93)